src/components/gux-dropdown/gux-dropdown.less
// Variables part
@background-color: #f9fafb;
@background-color-dark-theme: #555d66;

@text-color: @gux-grey-2;
@text-color-dark-theme: @gux-off-white;

@placeholder: @gux-pale-gray-2;

@border-color: @gux-border-alt;
@border-color-dark-theme: @gux-grey-1;

@focus-outline: fade(@gux-blue, 50%);
@focus-outline-dark-theme: @gux-blue;
@active-border: @gux-dark-blue;

@menu-background-color: @gux-off-white;
@menu-border-color: #dae1eb;

// Style
gux-dropdown {
  div.gux-dropdown {
    position: relative;
    margin: 4px 0;
    &.disabled {
      opacity: 0.5;
      pointer-events: none;
      cursor: default;
    }
    &.left {
      display: flex;
    }
    .select-field {
      position: relative;
      height: 32px;
      width: 100%;

      .ghost {
        position: absolute;
        height: 32px;
        width: 100%;
        box-sizing: border-box;
        padding: 5px 25px 4px 12px;
        border: 1px solid transparent;
        border-radius: 2px;
        font-size: 12px;
        line-height: 1.66666667;
        white-space: nowrap;
        overflow: hidden;
      }

      gux-text-field {
        > div {
          margin: 0;
        }

        input {
          cursor: pointer;
          background-color: transparent;
          text-overflow: ellipsis;
        }

        &.unclearable {
          button {
            display: none;
          }
        }
      }

      button.dropdown-indicator {
        position: absolute;
        top: 1px;
        right: 3px;
        bottom: 0;
        border: none;
        background: none;
        cursor: pointer;
        display: block;
        outline: none;
        overflow: hidden;
        pointer-events: none;
      }
      &.top {
        .ghost {
          margin-top: 32px;
        }
      }
    }

    .gux-options {
      display: none;
      position: absolute;
      width: 100%;
      z-index: 1;
      margin: 0;
      padding: 8px 0;
      background: @menu-background-color;
      border: 1px solid @menu-border-color;
      box-shadow: none;
      color: @text-color;

      &.opened {
        display: block;
      }

      > gux-option {
        position: relative;
        height: 32px;
        line-height: 32px;
        padding: 0px 16px;
        display: flex;
        cursor: pointer;

        > div {
          position: relative;
          overflow: hidden; 
          white-space: nowrap;
          text-overflow: ellipsis;

          .ghost {
            position: absolute;
          }
        }

        &[disabled] {
          opacity: 0.5;
          pointer-events: none;
          cursor: default;
        }

        &.filtered {
          display: none;
        }

        &:not([disabled]) {
          &[selected] {
            background: @gux-light-blue;
            color: @text-color;
          }

          &:hover,
          &:focus {
            background: @gux-dark-blue;
            color: @gux-off-white;
          }
        }
      }
    }

    &.page {
      .select-field {
        .ghost {
          white-space: nowrap;
          overflow: hidden;
          
          .large-title();
          line-height: 1.66666667;
          height: 48px;
          padding: 2px 25px 4px 11px;
        }
        height: 48px;
        gux-text-field {
          div.gux-field {
            height: 48px;
          }
          input {
            .large-title();
            line-height: 1.66666667;
            height: 48px;
            border: none;
            border-bottom: 2px solid transparent;
            &:focus {
              box-shadow: none;
              border: none;
              border-bottom: 2px solid fade(@gux-blue, 50%);
            }
          }
        }
      }

      &.active {
        .select-field gux-text-field input:focus {
          border-bottom: 1px solid @gux-dark-blue;
        }
      }
    }
    &.palette {
      .select-field {
        .ghost {
          white-space: nowrap;
          overflow: hidden;

          .small-title();
          line-height: 1.66666667;
          height: 52px;
          padding: 9px 25px 4px 11px;
        }
        height: 52px;
        gux-text-field {
          div.gux-field {
            height: 52px;
          }
          input {
            .small-title();
            line-height: 1.66666667;
            height: 52px;
            border: none;
            border-bottom: 2px solid transparent;
            &:focus {
              box-shadow: none;
              border: none;
              border-bottom: 2px solid fade(@gux-blue, 50%);
            }
          }
        }
      }

      &.active {
        .select-field gux-text-field input:focus {
          border-bottom: 1px solid @gux-dark-blue;
        }
      }
      
    }
  }
}
// Theming
// Light
.gux-dropdown-light-theme {
  div.gux-dropdown {
    .select-field {
      .ghost {
        background-color: @background-color;
        color: @placeholder;
      }

      gux-text-field input {
        border-color: @border-color;
        color: @text-color;

        &:focus {
          box-shadow: 0px 0px 0px 3px @focus-outline;
        }
      }

      button.dropdown-indicator {
        color: @text-color;
      }
    }

    &.default.active {
      .select-field {
        .gux-field {
          input:focus {
            border: 1px solid @active-border;
            box-shadow: 0px 0px 4px @focus-outline;
          }
        }
      }
    }

    &.page {
      .select-field {
        .ghost {
          background-color: @gux-off-white-bg;
          color: @gux-grey-bg-3;
        }

        gux-text-field input {
          border-bottom: 1px solid @gux-border;
        }
      }

      &.active {
        gux-text-field input {
          border-bottom: 1px solid @gux-blue;
        }
      }
    }
    &.palette {
      .select-field {
        .ghost {
          background-color: @gux-off-white-bg;
          color: @gux-grey-bg-3;
        }
        gux-text-field {
          input {
            border-bottom: 1px solid @gux-border;
          }
        }
      }
      &.active {
        gux-text-field {
          input {
            border-bottom: 1px solid @gux-blue;
          }
        }
      }
    }
  }
}

.gux-light-theme {
  gux-dropdown {
    .gux-dropdown-light-theme;
  }
}
.gux-dropdown.gux-light-theme {
  .gux-dropdown-light-theme;
}

// Dark
.gux-dropdown-dark-theme {
  color: @gux-off-white;
  div.gux-dropdown {
    .select-field {
      .ghost {
        background-color: @background-color-dark-theme;
        color: @gux-pale-gray-2;
      }

      gux-text-field input {
        border-color: @border-color-dark-theme;
        color: @text-color-dark-theme;
      }

      button.dropdown-indicator {
        color: @text-color-dark-theme;
      }
    }

    &.default {
      .select-field {
        gux-text-field input {
          &:focus {
            box-shadow: 0px 0px 1px 3px @focus-outline-dark-theme;
          }
        }
      }

      &.active {
        .select-field {
          .gux-field {
            input:focus {
              border-color: @border-color-dark-theme;
              box-shadow: 0px 0px 1px 3px @focus-outline-dark-theme;
            }
          }
        }
      }
    }

    &.page {
      .select-field {
        .ghost {
          background-color: @gux-charcoal;
        }

        gux-text-field input {
          border-color: @gux-grey-1;

          &:focus {
            border-color: fade(@gux-blue, 50%);
          }
        }
      }

      &.active {
        gux-text-field input:focus {
          border-bottom: 1px solid @gux-blue;
        }
      }
    }
    &.palette {
      .select-field {
        .ghost {
          background-color: @gux-charcoal;
        }

        gux-text-field input {
          border-color: @gux-grey-1;

          &:focus {
            border-color: fade(@gux-blue, 50%);
          }
        }
      }

      &.active {
        gux-text-field input:focus {
          border-bottom: 1px solid @gux-blue;
        }
      }
    }
  }
}
.gux-dark-theme {
  gux-dropdown {
    .gux-dropdown-dark-theme;
  }
}
.gux-dropdown.gux-dark-theme {
  .gux-dropdown-dark-theme;
}
// Default Theme
gux-dropdown {
  .gux-dropdown-light-theme;
}

